--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen Opdracht</title>
-    <link rel="stylesheet" href="styles/composition.css">
     <link rel="stylesheet" href="opdrachten.html">
     <link rel="stylesheet" href="portfolio.html">
     <link rel="stylesheet" href="blog.html">
+    <link rel="stylesheet" href="styles/composition.css">
+    <link rel="stylesheet" href="styles/utilities.css">
 </head>
 <header>
     <nav id="main-menu">
-        <a href="portfolio.html">portfolio</a>
-        <a href="opdrachten.html">opdrachten</a>
-        <a href="blog.html">blog </a>
+        <a class="links" href="portfolio.html">portfolio</a>
+        <a class="links" href="opdrachten.html">opdrachten</a>
+        <a class="links" href="blog.html">blog </a>
     </nav>
 </header>
 
@@ -23,15 +24,15 @@
 
     <hr>
 
-    <ul>
+    <ul id="page-menu">
         <li>
-            <a href="#kennismaking">kennismaking</a>
+            <a class="page-link" href="#kennismaking">kennismaking</a>
         </li>
         <li>
-            <a href="#verleden">verleden</a>
+            <a class="page-link" href="#verleden">verleden</a>
         </li>
         <li>
-            <a href="#toekomst">toekomst</a>
+            <a class="page-link" href="#toekomst">toekomst</a>
         </li>
     </ul>
 
@@ -39,7 +40,7 @@
 
     <section id="kennismaking" class="main-html">
         <h1>Kennismaking</h1>
-        <img id="fotos" src="images/mee.jpg" alt="mee" style="height: 500px;">
+        <img id="fotos" src="images/mee.jpg" alt="mee">
         <p class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit totam quis eius nihil aspernatur placeat est ea beatae temporibus voluptates corrupti, pariatur nulla et sed debitis maiores maxime enim repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi officiis dolores earum tempore porro modi. Debitis rerum mollitia earum. Iste, optio possimus nam labore est consequatur voluptatibus molestiae reiciendis officia?</p>
     </section>
 
@@ -47,7 +48,7 @@
 
     <section id="verleden" class="main-html">
         <h2>verleden</h2>
-        <img src="images/mee.jpg" alt="kleine ikke" style="height: 500px;">
+        <img src="images/mee.jpg" alt="kleine ikke">
         <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odio at, officiis, temporibus, in dolorum
             nisi
             et consectetur cum esse vitae hic delectus quam! Quaerat rem inventore ad laudantium atque.</p>
@@ -57,7 +58,7 @@
 
     <section id="toekomst" class="main-html">
         <h2>toekomst</h2>
-        <img src="images/mee.jpg" alt="toekomstige ikke" style="height: 500px;">
+        <img src="images/mee.jpg" alt="toekomstige ikke">
         <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempora sint omnis, consectetur excepturi
             natus nobis similique dignissimos repellat perferendis. Eum vitae minus consequatur aut atque error
             necessitatibus, tempore voluptatem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni ex eaque
