--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <nav id="main-menu">
-        <a class="links" href="portfolio.html">portfolio</a>
+        <a class="links" href="index.html">portfolio</a>
         <a class="links" href="opdrachten.html">opdrachten</a>
         <a class="links" href="blog.html">blog </a>
     </nav>
@@ -39,31 +39,45 @@
     <hr>
 
     <section id="kennismaking" class="main-html">
-        <h1>Kennismaking</h1>
-        <img id="fotos" src="images/mee.jpg" alt="mee">
-        <p class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit totam quis eius nihil aspernatur placeat est ea beatae temporibus voluptates corrupti, pariatur nulla et sed debitis maiores maxime enim repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi officiis dolores earum tempore porro modi. Debitis rerum mollitia earum. Iste, optio possimus nam labore est consequatur voluptatibus molestiae reiciendis officia?</p>
+        <h1>kennismaking</h1>
+        <div>
+            <img class="foto" src="images/mee.jpg" alt="mee">
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eos magnam asperiores
+                voluptatem ipsum in voluptatibus deserunt quos voluptatum quas, harum laudantium totam aut eveniet
+                excepturi ratione optio dolor numquam?</p>
+        </div>
     </section>
+
 
     <hr>
 
     <section id="verleden" class="main-html">
         <h2>verleden</h2>
-        <img src="images/mee.jpg" alt="kleine ikke">
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odio at, officiis, temporibus, in dolorum
-            nisi
-            et consectetur cum esse vitae hic delectus quam! Quaerat rem inventore ad laudantium atque.</p>
+        <div>
+            <img class="foto" src="images/mee.jpg" alt="kleine ikke">
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odio at, officiis,
+                temporibus,
+                in dolorum
+                nisi
+                et consectetur cum esse vitae hic delectus quam! Quaerat rem inventore ad laudantium atque.</p>
+        </div>
     </section>
 
     <hr>
 
     <section id="toekomst" class="main-html">
         <h2>toekomst</h2>
-        <img src="images/mee.jpg" alt="toekomstige ikke">
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempora sint omnis, consectetur excepturi
-            natus nobis similique dignissimos repellat perferendis. Eum vitae minus consequatur aut atque error
-            necessitatibus, tempore voluptatem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni ex eaque
-            omnis asperiores aperiam quidem commodi iure reiciendis fugiat fugit recusandae laudantium id voluptas,
-            officia, mollitia accusantium quibusdam. Quisquam, quod.</p>
+        <div>
+            <img class="foto" src="images/mee.jpg" alt="toekomstige ikke">
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempora sint omnis,
+                consectetur
+                excepturi
+                natus nobis similique dignissimos repellat perferendis. Eum vitae minus consequatur aut atque error
+                necessitatibus, tempore voluptatem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni ex
+                eaque
+                omnis asperiores aperiam quidem commodi iure reiciendis fugiat fugit recusandae laudantium id voluptas,
+                officia, mollitia accusantium quibusdam. Quisquam, quod.</p>
+        </div>
     </section>
 
     <hr>
