--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <link rel="stylesheet" href="styles/composition.css">
     <link rel="stylesheet" href="styles/utilities.css">
     <link rel="stylesheet" href="index.html">
@@ -14,7 +16,35 @@
         <a href="index.html">home page</a>
     </nav>
 </header>
+
 <body>
-    
+    <h1>Blog</h1>
+    <section>
+        <h2>Eerste dag op school</h2>
+        <span class="material-icons-outlined">
+            event
+            </span><time>01/09/2021</time>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, odit incidunt molestiae nemo optio sapiente assumenda.</p>
+        <a href="Blog1.html">Lees hier meer</a>
+    </section>
+    <hr>
+    <section>
+        <h2>Eerste raport</h2>
+        <span class="material-icons-outlined">
+            event
+            </span><time>31/10/2021</time>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, odit incidunt molestiae nemo optio sapiente assumenda.</p>
+        <a href="Blog2.html">Lees hier meer</a>
+    </section>
+    <hr>
+    <section>
+        <h2>Eerste examen</h2>
+        <span class="material-icons-outlined">
+            event
+            </span><time>7/12/2021</time>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, odit incidunt molestiae nemo optio sapiente assumenda.</p>
+        <a href="Blog3.html">Lees hier meer</a>
+    </section>
 </body>
+
 </html>
