--- a/opdrachten.html
+++ b/opdrachten.html
@@ -22,7 +22,7 @@
         <li id="opdrachten-1">
             <h2>opdracht 1</h2>
             <p> my superhero</p>
-            <a href="opdrachten/Index.html">MEGA VEGAN</a>
+            <a href="opdracht1.html">MEGA VEGAN</a>
             <p>hier is mijn eerste opdracht in html, deze gaat over een superhero</p>
         </li>
         
