--- a/Blog1.html
+++ b/Blog1.html
@@ -25,9 +25,9 @@
         <span class="material-icons-outlined">
             event
             </span><time>01/09/2021</time>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nesciunt quod assumenda aliquam amet
-            similique nobis soluta totam tempore cum id, facere nemo minus tenetur blanditiis eos porro? Placeat,
-            distinctio?</p>
+        <p class="kleine-uitleg">Mijn eerste dag op school. Ik liep pius x binnen zoekende naar mijn vrienden. Toen we naar de klass liepen zag ik direct maxwell en princess.
+            Ik was zeer opgelucht want ik kende dus sowizo 2 mensen al in mijn klas.
+        </p>
     </section>
 </body>
 
