--- a/Blog2.html
+++ b/Blog2.html
@@ -25,9 +25,9 @@
         <span class="material-icons-outlined">
             event
             </span><time>31/10/2021</time>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam saepe ut, voluptas quod a inventore
-            perferendis, consectetur beatae, aliquid impedit quasi reiciendis quo ea debitis aperiam incidunt repellat
-            dolores magni.</p>
+        <p class="kleine-uitleg">Toen ik voor het eerst mijn rapport zag dacht ik van: wat is dit. Ik had zes buizen. ik wist dat ik er wel 2 ging hebben maar geen zes
+            ze zeiden toen tegen mij als je rapport niet goed is bij kerst dan zul je moeten veranderen van richting.
+        </p>
     </section>
 </body>
 
