--- a/Blog3.html
+++ b/Blog3.html
@@ -25,9 +25,9 @@
         <span class="material-icons-outlined">
             event
             </span><time>7/12/2021</time>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, provident minima unde commodi repellat
-            neque labore nulla voluptates hic ducimus voluptate temporibus, molestias, numquam tenetur esse! Sed rerum
-            perspiciatis ab.</p>
+        <p class="kleine-uitleg">mijn eerste examen, Bedrijfseconomie. Ik ben 4 weken op voorhand begonnen met Bedrijfseconomie helemaal te samenvatten en te leren
+            ik hoop dat het goed is gegaan.
+        </p>
     </section>
 </body>
 
