--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
         <span class="material-icons-outlined">
             event
             </span><time>01/09/2021</time>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, odit incidunt molestiae nemo optio sapiente assumenda.</p>
+        <p>hier vertel ik meer over mijn eerste dag op school</p>
         <a href="Blog1.html">Lees hier meer</a>
     </section>
     <hr>
@@ -33,7 +33,7 @@
         <span class="material-icons-outlined">
             event
             </span><time>31/10/2021</time>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, odit incidunt molestiae nemo optio sapiente assumenda.</p>
+        <p>hier vertel ik meer over mijn eerste rapport in oktober</p>
         <a href="Blog2.html">Lees hier meer</a>
     </section>
     <hr>
@@ -42,7 +42,7 @@
         <span class="material-icons-outlined">
             event
             </span><time>7/12/2021</time>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, odit incidunt molestiae nemo optio sapiente assumenda.</p>
+        <p>hier vertel ik meer over mijn eerste examen</p>
         <a href="Blog3.html">Lees hier meer</a>
     </section>
 </body>
