--- a/blog.html
+++ b/blog.html
@@ -18,14 +18,14 @@
 </header>
 
 <body>
-    <h1>Blog</h1>
+    <h1>Blog</h1>  
     <section>
         <h2>Eerste dag op school</h2>
         <span class="material-icons-outlined">
             event
             </span><time>01/09/2021</time>
         <p>hier vertel ik meer over mijn eerste dag op school</p>
-        <a href="Blog1.html">Lees hier meer</a>
+        <a class="blog-links" href="Blog1.html">Lees hier meer</a>
     </section>
     <hr>
     <section>
@@ -34,7 +34,7 @@
             event
             </span><time>31/10/2021</time>
         <p>hier vertel ik meer over mijn eerste rapport in oktober</p>
-        <a href="Blog2.html">Lees hier meer</a>
+        <a class="blog-links" href="Blog2.html">Lees hier meer</a>
     </section>
     <hr>
     <section>
@@ -43,7 +43,7 @@
             event
             </span><time>7/12/2021</time>
         <p>hier vertel ik meer over mijn eerste examen</p>
-        <a href="Blog3.html">Lees hier meer</a>
+        <a class="blog-links" href="Blog3.html">Lees hier meer</a>
     </section>
 </body>
 
