--- a/opdrachten.html
+++ b/opdrachten.html
@@ -22,21 +22,21 @@
         <li id="opdrachten-1">
             <h2>opdracht 1</h2>
             <p> my superhero</p>
-            <a href="opdracht1.html">MEGA VEGAN</a>
+            <a class="opdrachten-links" href="opdracht1.html">MEGA VEGAN</a>
             <p>hier is mijn eerste opdracht in html, deze gaat over een superhero</p>
         </li>
         
         <li id="opdrachten-2">
             <h2>opdracht 2</h2>
             <p>opdracht 2</p>
-            <a href="#">opdracht 2</a>
+            <a class="opdrachten-links" href="#">opdracht 2</a>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
         </li>
         
         <li id="opdrachten-3">
             <h2>opdracht 3</h2>
             <p>opdracht 3 </p>
-            <a href="#">opdracht 3</a>
+            <a class="opdrachten-links" href="#">opdracht 3</a>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
         </li>
     </ul>
