--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/utilities.css">
 </head>
 <header>
-    <nav id="main-menu">
+    <nav id="main-menu" class="dominant-c"> 
         <a class="links" href="index.html">portfolio</a>
         <a class="links" href="opdrachten.html">opdrachten</a>
         <a class="links" href="blog.html">blog </a>
@@ -38,13 +38,13 @@
 
     <hr>
 
-    <section id="kennismaking" class="main-html">
+    <section id="kennismaking">
         <h1>kennismaking</h1>
         <div>
             <img class="foto" src="images/mee.jpg" alt="mee">
-            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eos magnam asperiores
-                voluptatem ipsum in voluptatibus deserunt quos voluptatum quas, harum laudantium totam aut eveniet
-                excepturi ratione optio dolor numquam?</p>
+            <p class="info">Hallo ik ben oscar tollenaere. Ik ben 18 jaar oud en zit in het vijfd middelbaar op piustien.
+                ik volg Boekhouden-informatica 
+            </p>
         </div>
     </section>
 
